tests/fail/elaboration/unsolved/hole.fathom
//~ exit-code = 1

?woopsie
